Closed
Bug 138086
Opened 23 years ago
Closed 15 years ago
LDAP over SSL autocomplete crash [@ nsLDAPConnection::AddPendingOperation(nsILDAPOperation*)] (v3), [@ nsLDAPConnection::AddPendingOperation] (v2)
Categories
(MailNews Core :: LDAP Integration, defect, P3)
MailNews Core
LDAP Integration
Tracking
(thunderbird3.1 rc1-fixed)
RESOLVED
FIXED
Thunderbird 3.3a1
| Tracking | Status | |
|---|---|---|
| thunderbird3.1 | --- | rc1-fixed |
People
(Reporter: dmosedale, Assigned: mkmelin)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
|
1.08 KB,
patch
|
dmosedale
:
review+
dmosedale
:
superreview+
dmosedale
:
approval-thunderbird3.1+
|
Details | Diff | Splinter Review |
Talkback ID: 5314179
Stack looks like this:
nsLDAPConnection::AddPendingOperation()
nsLDAPOperation::SimpleBind()
nsLDAPAutoCompleteSession::OnLDAPInit()
XPTC_InvokeByIndex()
[etc]
I've seen this a few times, but have yet to be able to catch it with the debugger.
Comment 1•23 years ago
|
||
Discussed in mail news bug meeting with Engineering Marketing and PjM. Decided
to plus this bug. needinfo: are you still seeing this?
Comment 2•23 years ago
|
||
Discussed at mail news bug meeting. Decided to remove RTM from this bug. This
means fixing this bug is currently not planned for RTM.
Whiteboard: [ADT2],[RTM],needinfo → [ADT2],needinfo
| Reporter | ||
Comment 3•23 years ago
|
||
I haven't seen this recently, but I doubt it's because the bug has gone away.
Target Milestone: mozilla1.0 → mozilla1.0.1
| Reporter | ||
Updated•23 years ago
|
Priority: -- → P3
Updated•23 years ago
|
| Reporter | ||
Updated•23 years ago
|
Target Milestone: mozilla1.0.1 → mozilla1.1beta
Comment 4•22 years ago
|
||
This didn't happen to me using Linux Mozilla 1.2.1 :)
Good news?
Updated•21 years ago
|
Summary: LDAP over SSL autocomplete crash → LDAP over SSL autocomplete crash [@ nsLDAPConnection::AddPendingOperation]
Updated•21 years ago
|
Product: MailNews → Core
Comment 5•20 years ago
|
||
Just saw this today using build 2005-09-18-05 on Windows XP SeaMonkey trunk.
OS: Linux → All
| Reporter | ||
Comment 6•19 years ago
|
||
Assigning bugs that I'm not actively working on back to nobody; use SearchForThis as a search term if you want to delete all related bugmail at once.
Assignee: dmose → nobody
Status: ASSIGNED → NEW
Comment 7•17 years ago
|
||
These still exist on branch and trunk
TB41123847 is the only one with comments - "Was composing a new email and typing the address. TB then looked up in our company LDAP server (through SSL), popped up the dialog about expired certificate. When I clicked OK, it crashed."
nsLDAPConnection::AddPendingOperation() [mozilla/directory/xpcom/base/src/nsLDAPConnection.cpp, line 380]
nsLDAPOperation::SimpleBind() [mozilla/directory/xpcom/base/src/nsLDAPOperation.cpp, line 224]
nsLDAPAutoCompleteSession::OnLDAPInit() [mozilla/xpfe/components/autocomplete/src/nsLDAPAutoCompleteSession.cpp, line 848]
XPTC_InvokeByIndex()
EventHandler() [mozilla/xpcom/proxy/src/nsProxyEvent.cpp, line 158]
PL_HandleEvent() [mozilla/xpcom/threads/plevent.c, line 688]
PL_ProcessPendingEvents() [mozilla/xpcom/threads/plevent.c, line 623]
nsEventQueueImpl::ProcessPendingEvents() [mozilla/xpcom/threads/nsEventQueue.cpp, line 452]
event_processor_callback() [mozilla/widget/src/gtk2/nsAppShell.cpp, line 71]
libglib-2.0.so.0 + 0x4c99f (0x006aa99f)
libglib-2.0.so.0 + 0x28385 (0x00686385)
libglib-2.0.so.0 + 0x29c35 (0x00687c35)
libglib-2.0.so.0 + 0x29e8c (0x00687e8c)
libgtk-x11-2.0.so.0 + 0x10a517 (0x00313517)
nsAppShell::Run() [mozilla/widget/src/gtk2/nsAppShell.cpp, line 141]
nsAppStartup::Run() [mozilla/toolkit/components/startup/src/nsAppStartup.cpp, line 152]
XRE_main() [mozilla/toolkit/xre/nsAppRunner.cpp, line 848]
main() [mozilla/mail/app/nsMailApp.cpp, line 63]
libc.so.6 + 0x14de3 (0x03cb9de3)
TB43694511 has shorter stack
Updated•17 years ago
|
Product: Core → MailNews Core
Comment 8•16 years ago
|
||
crash rank #169 for v3.0.3, similar stack. examined 8 of 200.
bp-81562743-b010-4733-bb47-903b92100406
0 thunderbird-bin nsLDAPConnection::AddPendingOperation directory/xpcom/base/src/nsLDAPConnection.cpp:394
1 thunderbird-bin nsLDAPOperation::SimpleBind directory/xpcom/base/src/nsLDAPOperation.cpp:337
2 thunderbird-bin nsAbLDAPListenerBase::OnLDAPInit mailnews/addrbook/src/nsAbLDAPListenerBase.cpp:323
3 thunderbird-bin nsLDAPAutoCompleteSession::OnLDAPInit mailnews/addrbook/src/nsLDAPAutoCompleteSession.cpp:444
Summary: LDAP over SSL autocomplete crash [@ nsLDAPConnection::AddPendingOperation] → LDAP over SSL autocomplete crash [@ nsLDAPConnection::AddPendingOperation(nsILDAPOperation*)] (v3), [@ nsLDAPConnection::AddPendingOperation] (v2)
| Assignee | ||
Comment 9•16 years ago
|
||
http://hg.mozilla.org/releases/comm-1.9.1/annotate/7660bbbdfdc3/directory/xpcom/base/src/nsLDAPConnection.cpp#l394
mPendingOperations null?
which looks like it should be the case if the connection was closed
| Assignee | ||
Comment 10•15 years ago
|
||
Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED
Attachment #444316 -
Flags: superreview?(dmose)
Attachment #444316 -
Flags: review?(dmose)
| Assignee | ||
Updated•15 years ago
|
Whiteboard: [ADT2],needinfo
Target Milestone: mozilla1.1beta → Thunderbird 3.1b2
| Reporter | ||
Comment 11•15 years ago
|
||
Comment on attachment 444316 [details] [diff] [review]
proposed fix
r+sr=dmose. Bonus points for adding a unit test, but since this is a band-aid fix for a known crasher, I think it's ok for this to land without that if you don't have the bandwidth. In that case, please add in-testsuite? to this bug.
Thanks for the patch!
Attachment #444316 -
Flags: superreview?(dmose)
Attachment #444316 -
Flags: superreview+
Attachment #444316 -
Flags: review?(dmose)
Attachment #444316 -
Flags: review+
| Reporter | ||
Comment 12•15 years ago
|
||
Comment on attachment 444316 [details] [diff] [review]
proposed fix
Also, a=thunderbird3.1.
Attachment #444316 -
Flags: approval-thunderbird3.1+
Comment 13•15 years ago
|
||
Checked in:
http://hg.mozilla.org/comm-central/rev/4ff61905f20f
http://hg.mozilla.org/releases/comm-1.9.2/rev/346c641be4cf
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
status-thunderbird3.1:
--- → rc1-fixed
Resolution: --- → FIXED
Target Milestone: Thunderbird 3.1b2 → Thunderbird 3.2a1
Updated•14 years ago
|
Crash Signature: [@ nsLDAPConnection::AddPendingOperation(nsILDAPOperation*)]
[@ nsLDAPConnection::AddPendingOperation]
You need to log in
before you can comment on or make changes to this bug.
Description
•