Bug 138086 LDAP over SSL autocomplete crash [@ nsLDAPConnection::AddPendingOperation(nsILDAPOperation*)] (v3), [@ nsLDAPConnection::AddPendingOperation] (v2). r/sr=dmose